# robotic_scanning

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: view_frame.txt
data/: capture_combined_wing.ply  capture_left_wing.ply  capture_right_wing.ply
src/: main.cpp
src/robot/: iiwa_controller.cpp  iiwa_controller.h  iiwa_ros.h  iiwa_trajectory.cpp  iiwa_trajectory.h  iiwa_util.h
src/robot/command/: iiwa_command.h  joint_position_command.h
src/robot/service/: time_to_destination.h
src/robot/state/: cartesian_pose_state.h  joint_position_state.h
src/scanner/: rs_scanner.cpp  rs_scanner.h
src/util/: config.cpp  config.h  file_io.cpp  file_io.h  geometry.cpp  geometry.h
src/viewer/: pcl_viewer.cpp  pcl_viewer.h
trajectory/: bottle.txt  flower.txt  flower_1.txt  test.txt
